Fix Scheduler visibility in compact theme (T627090) (#3983)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -246,22 +246,6 @@
         height: @baseHeight + 1px;
     }
 
-    &.dx-scheduler-work-space-vertical-grouped {
-        &.dx-scheduler-work-space-day {
-            .dx-scheduler-header-scrollable {
-                height: @SCHEDULER_HEADER_PANEL_TOP_GAP;
-            }
-        }
-
-        &.dx-scheduler-work-space-week,
-        &.dx-scheduler-work-space-work-week,
-        &.dx-scheduler-work-space-month {
-            .dx-scheduler-header-scrollable {
-                height: @SCHEDULER_HEADER_PANEL_TABLE_CELL_HEIGHT + @SCHEDULER_HEADER_PANEL_TOP_GAP;
-            }
-        }
-    }
-
     &.dx-scheduler-work-space-horizontal-grouped {
         &.dx-scheduler-timeline {
             .dx-scheduler-header-scrollable {
